2010-05-11  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: Track API changes.

2010-04-28  Mike Krüger  <mkrueger@novell.com>

	* Gui/DataProvider.cs: Track API changes.

2010-03-26  Levi Bard  <levi@unity3d.com>

	* Project/CProject.cs: Fix linking for library projects whose
	  names are prefixed with lib. Fixes #587298.

2010-03-22  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* CBinding.addin.xml: Bumped MD version.

2010-03-18  Levi Bard  <levi@unity3d.com>

	* Gui/DataProvider.cs: 
	* Gui/CTextEditorExtension.cs: Track API changes.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* CBinding.csproj: Remove import off mono.addins targets.

2010-03-17  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* CBinding.csproj:
	* CBinding.addin.xml:
	* gtk-gui/gui.stetic:
	* Project/CProject.cs:
	* Gui/DataProvider.cs:
	* Gui/CompilerPanel.cs:
	* Compiler/CCompiler.cs:
	* Parser/LanguageItem.cs:
	* Compiler/GppCompiler.cs:
	* Compiler/GNUCompiler.cs:
	* Compiler/GccCompiler.cs:
	* Gui/EditPackagesDialog.cs:
	* Gui/OutputOptionsPanel.cs:
	* Parser/CDocumentParser.cs:
	* Gui/GeneralOptionsPanel.cs:
	* Gui/CodeGenerationPanel.cs:
	* Gui/CTextEditorExtension.cs:
	* Navigation/UnionNodeBuilder.cs:
	* Navigation/MacroNodeBuilder.cs:
	* Navigation/ClassNodeBuilder.cs:
	* Gui/SwapSourceHeaderCommand.cs:
	* Navigation/MemberNodeBuilder.cs:
	* Navigation/GlobalsNodeBuilder.cs:
	* Navigation/TypedefNodeBuilder.cs:
	* Navigation/FunctionNodeBuilder.cs:
	* Navigation/VariableNodeBuilder.cs:
	* Navigation/StructureNodeBuilder.cs:
	* Navigation/NamespaceNodeBuilder.cs:
	* Navigation/EnumeratorNodeBuilder.cs:
	* Navigation/EnumerationNodeBuilder.cs:
	* ProjectPad/ProjectPackageNodeBuilder.cs:
	* gtk-gui/CBinding.CodeGenerationPanel.cs:
	* Navigation/LanguageItemCommandHandler.cs:
	* Navigation/MacroDefinitionsNodeBuilder.cs:
	* Navigation/ProjectNodeBuilderExtension.cs:
	* ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Merged