@@ -1,3 +1,14 @@
+2010-05-11  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Makefile.am:
+	* CBinding.csproj:
+	* CBinding.addin.xml:
+	* Project/CProject.cs:
+	* Gui/CTextEditorExtension.cs:
+	* Gui/SwapSourceHeaderCommand.cs: Replaced the 'Swap
+	  Source/Header' command by a handler for the 'Switch between
+	  related files' command.
+
 2010-05-11  Mike Krüger  <mkrueger@novell.com>
 
 	* Gui/DataProvider.cs: Track API changes.
